--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,7 +25,7 @@
 <div class="container">
     <div class="control-group">
         <h2>Contact us</h2>
-            <form action="mailto:hellomegabites@hotmail.com" method=post>
+            <form action="/contact" method=post>
                 <div>
                     <div class="control-group">
                     <p>
