about.html page altered and image added

--- a/templates/about.html
+++ b/templates/about.html
@@ -26,14 +26,16 @@
         <div class="col-lg-8 col-md-10 mx-auto">
             <h2>Hello! We are the creators of this blog!</h2>
             <h2>Team 404: Name Not Found </h2>
-            <img src="/static/img/IMG_0451.PNG" alt="Team 404 Illustration" width="800" height="800">
+            <img src="/static/img/image0.png" alt="Team 404 Illustration" width="800" height="600">
             <h2>Who are we?</h2>
             <p>We are a small team of beginner junior software developers creating and programming our very first blog,
-                both frontend and backend (full stack!). Our team members are: Ellie, Jen, Kaz, Reetu, and Wiam</p>
+                both frontend and backend (yep, full stack!). Our team members are: Ellie, Jen, Kaz and Wiam.</p>
+            <br>
             <h2>Why did we make this blog?</h2>
             <p>Our brief was to create a blog utilising Python, HTML, Javascript, CSS, MySQL, Flask, and
                 Flask-SQLAlchemy. We decided a coding-pun filled food blog was what we wanted to do, combing our love of
-                all things coding and our love of food!</p>
+                all things coding and our love of food! Our blog is fully programmed and complete, and we have included many genuinely delicious recipes full of coding references and tech-y puns.</p>
+            <br>
             <h2>Cool.</h2>
             <p>Thanks, we think so!</p>
         </div>
