--- a/templates/thank_you_for_registering.html
+++ b/templates/thank_you_for_registering.html
@@ -1,25 +1,23 @@
 {% extends 'blog_base.html' %}
 
-{% block title %} Recipes {% endblock %}
+{% block title %} Thank you {% endblock %}
 
 {% block body %}
 
 <!-- Page Header -->
 <header class="masthead"
-        style="background-image: url('{{ url_for('static', filename='img/well-foods-microbiome-jumbo.jpeg') }}')">
+        style="background-image: url('https://trello-attachments.s3.amazonaws.com/6055f8e6be992c7aa92e5792/607f32886ed53d08c380aa18/11ffb5bdab7ec974604c0fb2e5541105/image.jpeg')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h1>Recipes</h1>
-                    <span class="subheading">the coders who cook</span>
+                    <h1>Thank you for Registering!</h1>
+                    <span class="subheading">Looking forward to seeing your comments!</span>
                 </div>
             </div>
         </div>
     </div>
 </header>
-
-<!-- Main Content -->
 
 {% endblock %}
