--- a/templates/search.html
+++ b/templates/search.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h1>megaBITES</h1>
+                    <h1>Search for {{search}}</h1>
                     <span class="subheading">the coders who cook</span>
                 </div>
             </div>
@@ -23,12 +23,6 @@
 
 <!-- Main Content -->
 <div class="container">
-
-    {% if request.cookies.get('admin') == 'yes' %}
-    <form action="/post/create">
-        <button class="btn"><i class="btn btn-primary mb-2">>Add new post</i></button>
-    </form>
-    {% endif %}
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
@@ -52,26 +46,5 @@
         </div>
     </div>
 </div>
-
-<footer>
-    <div class="row justify-content-center">
-        <h2>The megaBITES Newsletter</h2>
-    </div>
-
-    <div class="row justify-content-center">
-        <p>Mouthwatering recipes and cooking hacks right to your inbox!</p>
-    </div>
-
-    <form class="form-inline d-flex justify-content-center" action="{{ url_for('subscribe') }}" method="post">
-        <div class="form-group mx-sm-3 mb-2">
-            <label for="email" class="sr-only">Email</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-        </div>
-        <div class="form-group mx-sm-3 mb-2">
-            <button type="submit" value="Subscribe" class="btn btn-primary mb-2">Subscribe!</button>
-        </div>
-    </form>
-
-</footer>
 
 {% endblock %}
